infrastructure/grafana-loki/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "${infranamespaceprefix}grafana-loki"
  labels:
    istio.io/rev: "stable"
    name: "${infranamespaceprefix}grafana-loki"
